0x00-hello_world/stderr
101-quote.c: In function ‘main’:
101-quote.c:13:52: error: ‘Dora’ undeclared (first use in this function)
   13 |  char str [] = "and that piece of art is useful" - Dora Korpar, 2015-10-19";
      |                                                    ^~~~
101-quote.c:13:52: note: each undeclared identifier is reported only once for each function it appears in
101-quote.c:13:57: error: expected ‘,’ or ‘;’ before ‘Korpar’
   13 |  char str [] = "and that piece of art is useful" - Dora Korpar, 2015-10-19";
      |                                                         ^~~~~~
101-quote.c:13:75: error: missing terminating " character [-Werror]
   13 |  char str [] = "and that piece of art is useful" - Dora Korpar, 2015-10-19";
      |                                                                           ^
101-quote.c:13:75: error: missing terminating " character
   13 |  char str [] = "and that piece of art is useful" - Dora Korpar, 2015-10-19";
      |                                                                           ^~
101-quote.c:16:10: error: stray ‘\’ in program
   16 |  putchar(\n);
      |          ^
101-quote.c:16:11: error: ‘n’ undeclared (first use in this function)
   16 |  putchar(\n);
      |           ^
101-quote.c:13:7: error: unused variable ‘str’ [-Werror=unused-variable]
   13 |  char str [] = "and that piece of art is useful" - Dora Korpar, 2015-10-19";
      |       ^~~
cc1: all warnings being treated as errors
